Minor UI changes and fixed user's group list not showing issue

--- a/chatapp/static/chatapp/css/stylesheet.css
+++ b/chatapp/static/chatapp/css/stylesheet.css
@@ -8,7 +8,7 @@ body{
   margin: auto auto;
 }
 #form_container{
-    padding-top:25%;
+    padding-top:5%;
 }
 .name{
     color:Green;
